[gd_scene load_steps=11 format=3 uid="uid://5w17t4cy1s3a"]

[ext_resource type="Script" path="res://scripts/player/player_floating_scene.gd" id="1_bkq84"]
[ext_resource type="PackedScene" uid="uid://dysyj150kk535" path="res://scenes/objects/placeables/plant_pot_preview.tscn" id="2_bm321"]
[ext_resource type="PackedScene" uid="uid://8rjjgn7r2g22" path="res://scenes/game_ui/game_pause_scene.tscn" id="2_u7ylh"]
[ext_resource type="PackedScene" uid="uid://lidxun3v1u3h" path="res://scenes/game_ui/game_over_scene.tscn" id="3_jljb4"]
[ext_resource type="PackedScene" uid="uid://cpoy7p032mikq" path="res://scenes/game_ui/game_won_scene.tscn" id="4_23rr2"]
[ext_resource type="PackedScene" uid="uid://d0k77qlot24nc" path="res://scenes/game_ui/typewriter_dialog_scene.tscn" id="5_pf534"]
[ext_resource type="Script" path="res://scripts/game_ui/game_won_scene.gd" id="6_gmia8"]
[ext_resource type="PackedScene" uid="uid://uqsnfk54cjss" path="res://scenes/game_ui/player_tooltip.tscn" id="6_utufl"]
[ext_resource type="Theme" uid="uid://5cp3idadbxgk" path="res://themes/regular_text_theme.tres" id="7_gyubv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_votpe"]

[node name="FloatingPlayerScene" type="CharacterBody3D"]
script = ExtResource("1_bkq84")
plant_pot_preview = ExtResource("2_bm321")

[node name="PlayerHead" type="Node3D" parent="."]

[node name="Camera" type="Camera3D" parent="PlayerHead"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.64966, 0)

[node name="RayCast3D" type="RayCast3D" parent="PlayerHead/Camera"]
target_position = Vector3(0, 0, -3)

[node name="BodyCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_votpe")

[node name="PlayerUI" type="Node" parent="."]

[node name="Pause" type="Node" parent="PlayerUI"]

[node name="GamePauseScene" parent="PlayerUI/Pause" instance=ExtResource("2_u7ylh")]
visible = false

[node name="GameEnd" type="Node" parent="PlayerUI"]

[node name="GameOverScene" parent="PlayerUI/GameEnd" instance=ExtResource("3_jljb4")]
visible = false

[node name="GameWonScene" parent="PlayerUI/GameEnd" instance=ExtResource("4_23rr2")]
visible = false
script = ExtResource("6_gmia8")

[node name="GameUI" type="Node" parent="PlayerUI"]

[node name="TypewriterDialogScene" parent="PlayerUI/GameUI" instance=ExtResource("5_pf534")]

[node name="PlayerTooltip" parent="PlayerUI/GameUI" instance=ExtResource("6_utufl")]
position = Vector2(0, 392)

[node name="PlayerUi" type="Node2D" parent="PlayerUI"]

[node name="CurrencyLabel" type="Label" parent="PlayerUI/PlayerUi"]
offset_left = 32.0
offset_top = 80.0
offset_right = 116.0
offset_bottom = 118.0
theme = ExtResource("7_gyubv")
text = "500 âˆ…"

[node name="OxygenLabel" type="Label" parent="PlayerUI/PlayerUi"]
offset_left = 32.0
offset_top = 32.0
offset_right = 210.0
offset_bottom = 70.0
theme = ExtResource("7_gyubv")
text = "Oxygen: 100 %"
